Refine layout integration with shared chrome

--- a/webroot/chrome/header.html
+++ b/webroot/chrome/header.html
@@ -27,14 +27,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Tony’s corner of the web — a mix of coding experiments, 3D printing, Raspberry Pi builds, and random maker notes." />
 <meta property="og:description" content="Tony’s corner of the web — a mix of coding experiments, 3D printing, Raspberry Pi builds, and random maker notes." />
-<link rel="canonical" href="http://localhost:4000/scrapegoat/header.html" />
-<meta property="og:url" content="http://localhost:4000/scrapegoat/header.html" />
+<link rel="canonical" href="http://localhost:4000/scrapegoat/chrome/header.html" />
+<meta property="og:url" content="http://localhost:4000/scrapegoat/chrome/header.html" />
 <meta property="og:site_name" content="xtonyx" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="xtonyx" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"Tony’s corner of the web — a mix of coding experiments, 3D printing, Raspberry Pi builds, and random maker notes.","headline":"xtonyx","url":"http://localhost:4000/scrapegoat/header.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"Tony’s corner of the web — a mix of coding experiments, 3D printing, Raspberry Pi builds, and random maker notes.","headline":"xtonyx","url":"http://localhost:4000/scrapegoat/chrome/header.html"}</script>
 <!-- End Jekyll SEO tag -->
 
 
